--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   ],
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.4.4",
+    "immutability-helper": "3.0.1",
+    "react-dnd": "9.4.0",
+    "react-dnd-html5-backend": "9.4.0",
+    "react-scripts": "3.2.0",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.55",
