--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
-    "date-fns": "^2.14.0",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.55",
@@ -19,10 +18,12 @@
     "@types/node": "^14.10.3",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
+    "date-fns": "^2.14.0",
     "i18next": "^15.1.3",
     "i18next-browser-languagedetector": "^3.0.1",
     "immutability-helper": "3.0.1",
     "lodash": "^4.17.21",
+    "mui-datatables": "^4.0.0",
     "npm": "^6.9.0",
     "polished": "^3.2.0",
     "prop-types": "^15.7.2",
