updated dev-build dev name

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -3,7 +3,7 @@ name: Build and Push to Development
 on:
   push:
     branches:
-      - dev
+      - master
 jobs:
   build:
     name: Build and Push to GCR
