updated prod-build Slack message

--- a/.github/workflows/prod-build.yml
+++ b/.github/workflows/prod-build.yml
@@ -71,7 +71,7 @@ jobs:
       uses: rtCamp/action-slack-notify@v2
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-        SLACK_MESSAGE: 'Production Docker Image of release service pushed to Google Container Registry Successfully'
+        SLACK_MESSAGE: 'Production Docker Image of buildly-ui pushed to Google Container Registry Successfully'
         MSG_MINIMAL: true
 
     # Send email alert
