updated prod-build mail message

--- a/.github/workflows/prod-build.yml
+++ b/.github/workflows/prod-build.yml
@@ -85,4 +85,4 @@ jobs:
         subject: Github Actions Build and Push job alert
         to: ${{ secrets.RECIPIENT_EMAIL }}
         from: ${{ secrets.SENDER_EMAIL }}
-        body: Production Docker Image of release service pushed to Google Container Registry Successfully
+        body: Production Docker Image of buildly-ui pushed to Google Container Registry Successfully
