--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buildly-react-template",
-  "version": "1.0.0",
+  "version": "0.5.2",
   "description": "Frontend Template from Buildly built using the React framework",
   "main": "src/index.js",
   "private": true,
@@ -21,11 +21,10 @@
     "@mui/material": "^5.2.5",
     "@mui/styles": "^5.2.3",
     "@mui/x-date-pickers": "^5.0.0-beta.1",
-    "@stripe/react-stripe-js": "^1.7.2",
-    "@stripe/stripe-js": "^1.29.0",
     "@types/node": "^14.10.3",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "chart.js": "^3.7.0",
     "date-fns": "^2.14.0",
     "i18next": "^15.1.3",
     "i18next-browser-languagedetector": "^3.0.1",
@@ -38,6 +37,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-beautiful-dnd": "12.2.0",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^16.7.0",
     "react-hot-loader": "^4.6.3",
     "react-i18next": "^10.11.0",
@@ -84,11 +84,9 @@
     "image-webpack-loader": "^4.6.0",
     "jest": "^24.9.0",
     "midgard-core": "^0.1.4",
-    "node-sass": "^6.0.1",
     "react-docgen": "^4.1.1",
     "react-docgen-typescript": "^1.12.4",
     "redux-mock-store": "^1.5.3",
-    "sass-loader": "^10.2.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-jest": "^24.0.2",
@@ -103,7 +101,7 @@
     "start": "webpack-dev-server --mode development",
     "build:dev": "webpack --mode development --env.build=dev",
     "start:dev": "webpack-dev-server --mode development --env.build=dev",
-    "https:local": "webpack-dev-server --https --cert /Users/radz/certs/server.crt --key /Users/radz/certs/server.key --mode development --env.build=local",
+    "https:local": "webpack-dev-server --https --cert /Users/radhikapatel/localhost.pem --key /Users/radhikapatel/localhost-key.pem --mode development --env.build=local",
     "start:local": "webpack-dev-server --mode development --env.build=local",
     "build:prod": "webpack --mode development --env.build=prod",
     "start:prod": "webpack-dev-server --mode development --env.build=prod",
