fix webpack production settings

--- a/package.json
+++ b/package.json
@@ -150,8 +150,8 @@
     "start:dev": "webpack-dev-server --mode development --env.build=dev --openssl-legacy-provider",
     "https:local": "webpack-dev-server --https --cert /Users/radhikapatel/localhost.pem --key /Users/radhikapatel/localhost-key.pem --mode development --env.build=local --openssl-legacy-provider",
     "start:local": "webpack-dev-server --mode development --env.build=local --openssl-legacy-provider",
-    "build:prod": "webpack --mode development --env.build=prod --openssl-legacy-provider",
-    "start:prod": "webpack-dev-server --mode development --env.build=prod",
+    "build:prod": "webpack --mode production --env.build=prod --openssl-legacy-provider",
+    "start:prod": "webpack-dev-server --mode production --env.build=prod",
     "test": "jest --watch",
     "test:prod": "jest",
     "test-coverage": "jest --updateSnapshot --coverage",
