--- a/package.json
+++ b/package.json
@@ -148,7 +148,7 @@
     "start": "webpack-dev-server --mode development --openssl-legacy-provider",
     "build:dev": "webpack --mode development --env.build=dev --openssl-legacy-provider",
     "start:dev": "webpack-dev-server --mode development --env.build=dev --openssl-legacy-provider",
-    "https:local": "webpack-dev-server --https --cert /Users/radhikapatel/localhost.pem --key /Users/radhikapatel/localhost-key.pem --mode development --env.build=local --openssl-legacy-provider",
+    "https:local": "webpack-dev-server --https --cert ~/.localhost-ssl/localhost.crt --key ~/.localhost-ssl/localhost.key --mode development --env.build=local --openssl-legacy-provider",
     "start:local": "webpack-dev-server --mode development --env.build=local --openssl-legacy-provider",
     "build:prod": "webpack --mode development --env.build=prod --openssl-legacy-provider",
     "start:prod": "webpack-dev-server --mode development --env.build=prod",
