--- a/.github/workflows/prod-build.yml
+++ b/.github/workflows/prod-build.yml
@@ -18,11 +18,12 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 16
+
     # auto generate tag from label defined in Dockerfile
     - name: Tag version
       uses: Klemensas/action-autotag@stable
       id: tag_version
-      env:
+      with:
         GITHUB_TOKEN: "${{ secrets.RELEASE_TOKEN }}"
 
     # Create release notes
@@ -49,7 +50,7 @@ jobs:
 
     # Login to docker
     - name: Docker login
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         registry: gcr.io
         username: _json_key
