--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -4,32 +4,47 @@ on:
   push:
     branches:
       - master
+
+env:
+  PROJECT_ID: dev-buildly
+  REGION: us
+  IMAGE_NAME: us-docker.pkg.dev/dev-buildly/gcr.io/dev/buildly-ui
+
 jobs:
   build:
     name: Build and Push to GCR
     runs-on: ubuntu-latest
-    env:
-      IMAGE_NAME: gcr.io/dev-buildly/insights/dev/buildly-ui
     steps:
-    - uses: actions/checkout@v3
+    - name: "Checkout"
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - uses: actions/setup-node@v3
       with:
         node-version: 16
 
-    - name: Docker login
-      uses: docker/login-action@v1
+    - id: "auth"
+      uses: "google-github-actions/auth@v1"
       with:
-        registry: gcr.io
-        username: _json_key
-        password: ${{ secrets.GCR_JSON_KEY }}
+        credentials_json: "${{ secrets.GCR_JSON_KEY }}"
+
+    - name: "Set up Cloud SDK"
+      uses: "google-github-actions/setup-gcloud@v1"
+
+    - name: "Use gcloud CLI"
+      run: "gcloud info"
 
     - name: yarn install, build and test
       run: |
         yarn install
         yarn run build:dev
 
+    - name: "Docker auth"
+      run: |-
+        gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
+
     - name: Build docker image
       run: docker build -t $IMAGE_NAME:latest .
 
-    - name: Push to Google Container Registry
+    - name: Push to Google Artifact Registry
       run: docker push $IMAGE_NAME:latest
