--- a/.github/workflows/prod-build.yml
+++ b/.github/workflows/prod-build.yml
@@ -8,7 +8,7 @@ on:
 env:
   PROJECT_ID: dev-buildly
   REGION: us
-  IMAGE_NAME: us-docker.pkg.dev/dev-buildly/gcr.io/dev/buildly-ui
+  IMAGE_NAME: us-docker.pkg.dev/dev-buildly/gcr.io/prod/buildly-ui
 
 jobs:
   build:
