fix github actions

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: yarn install, build and test
       run: |
-        yarn install
+        yarn install --force --no-lockfile --ignore-optional
         yarn run build:dev
 
     - name: "Docker auth"
