--- a/.github/workflows/prod-build.yml
+++ b/.github/workflows/prod-build.yml
@@ -66,7 +66,7 @@ jobs:
     # ui build
     - name: yarn install, build and test
       run: |
-        yarn install
+        yarn install --force --no-lockfile --ignore-optional
         yarn run build:prod
 
     - name: "Docker auth"
