--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -21,7 +21,7 @@ jobs:
         fetch-depth: 0
     - uses: actions/setup-node@v3
       with:
-        node-version: 16
+        node-version: 18
 
     - id: "auth"
       uses: "google-github-actions/auth@v1"
@@ -36,7 +36,8 @@ jobs:
 
     - name: yarn install, build and test
       run: |
-        yarn install
+        rm -rf node_modules
+        yarn install --force --no-lockfile --ignore-optional
         yarn run build:dev
 
     - name: "Docker auth"
