--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-hot-loader": "^4.6.3",
     "react-i18next": "^10.11.0",
-    "react-notifications": "^1.4.3",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-query": "^3.39.3",
     "react-redux": "^7.1.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
@@ -76,10 +76,11 @@
     "typescript": "^4.4.2",
     "uuid": "3.3.3",
     "web-vitals": "^2.1.0",
-    "xstate": "^4.37.2",
     "workbox-core": "^6.5.1",
     "workbox-precaching": "^6.5.1",
-    "workbox-window": "^6.5.1"
+    "workbox-window": "^6.5.1",
+    "xstate": "^4.37.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
