--- a/jsconfig.paths.json
+++ b/jsconfig.paths.json
@@ -23,8 +23,8 @@
       "@pages/*": [
         "./pages/*"
       ],
-      "@redux/*": [
-        "./redux/*"
+      "@react-query/*": [
+        "./react-query/*"
       ],
       "@routes/*": [
         "./routes/*"
@@ -34,6 +34,9 @@
       ],
       "@utils/*": [
         "./utils/*"
+      ],
+      "@zustand/*": [
+        "./zustand/*"
       ],
     },
   },
