--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -54,7 +54,7 @@ jobs:
       id: Kapstan
       uses: kapstan-io/deployment-action@latest
       with: 
-        application_name: buildly-core
+        application_name: buildly-ui
         image_repository_name: ${{ env.IMAGE_NAME }}
         image_tag: latest
         kapstan_api_key: ${{ secrets.KAPSTAN_KEY }}
