update build and library and improve readme

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,6 +50,10 @@
 
     },
     "settings": {
-        "import/resolver": "webpack"
+        "import/resolver": {
+            "webpack": {
+            "config": "webpack.config.js"
+            }
+        }
     }
 }
