--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^5.0.2",
+    "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^2.1.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.13.1",
@@ -91,7 +91,7 @@
     "file-loader": "^3.0.1",
     "file-replace-loader": "^1.3.2",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.6.3",
     "image-webpack-loader": "^4.6.0",
     "jest": "^24.9.0",
     "midgard-core": "^0.1.4",
@@ -103,9 +103,9 @@
     "ts-jest": "^24.0.2",
     "typedoc": "^0.14.2",
     "typescript": "^3.9.7",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack": "^5.99.7",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   },
   "resolutions": {
     "@babel/core": "7.19.6",
@@ -118,13 +118,13 @@
   },
   "scripts": {
     "build": "webpack --mode development",
-    "start": "webpack-dev-server --mode development",
+    "start": "webpack serve --mode development",
     "build:dev": "webpack --mode development --env.build=dev",
-    "start:dev": "webpack-dev-server --mode development --env.build=dev",
-    "https:local": "webpack-dev-server --https --cert /Users/radhikapatel/localhost.pem --key /Users/radhikapatel/localhost-key.pem --mode development --env.build=local",
-    "start:local": "webpack-dev-server --mode development --env.build=local",
-    "build:prod": "webpack --mode development --env.build=prod",
-    "start:prod": "webpack-dev-server --mode development --env.build=prod",
+    "start:dev": "webpack serve --mode development --env.build=dev",
+    "https:local": "webpack serve --https --cert /Users/radhikapatel/localhost.pem --key /Users/radhikapatel/localhost-key.pem --mode development --env.build=local",
+    "start:local": "webpack serve --mode development --env.build=local",
+    "build:prod": "webpack --mode production --env.build=prod",
+    "start:prod": "webpack serve --mode production --env.build=prod",
     "test": "jest --watch",
     "test:prod": "jest",
     "test-coverage": "jest --updateSnapshot --coverage",
