--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "axios": "^1.4.0",
+    "axios": "^1.8.3",
+    "axios-cancel": "^0.2.2",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.2",
     "date-fns": "^2.14.0",
@@ -91,6 +92,7 @@
     "@storybook/react": "^7.0.18",
     "@storybook/react-webpack5": "^7.0.18",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@babel/preset-typescript": "^7.27.0",
     "@types/jest": "^24.9.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
@@ -122,6 +124,7 @@
     "prop-types": "^15.8.1",
     "react-docgen": "^4.1.1",
     "react-docgen-typescript": "^1.12.4",
+    "rxjs": "^7.8.2",
     "sass": "^1.63.2",
     "source-map-loader": "^0.2.4",
     "storybook": "^7.0.18",
@@ -148,7 +151,7 @@
     "start": "webpack-dev-server --mode development --openssl-legacy-provider",
     "build:dev": "webpack --mode development --env.build=dev --openssl-legacy-provider",
     "start:dev": "webpack-dev-server --mode development --env.build=dev --openssl-legacy-provider",
-    "https:local": "webpack-dev-server --https --cert ~/.localhost-ssl/localhost.crt --key ~/.localhost-ssl/localhost.key --mode development --env.build=local --openssl-legacy-provider",
+    "https:local": "webpack-dev-server --https --ca ~/.localhost-ssl/localhost.pem --mode development --env.build=local",
     "start:local": "webpack-dev-server --mode development --env.build=local --openssl-legacy-provider",
     "build:prod": "webpack --mode production --env.build=prod --openssl-legacy-provider",
     "start:prod": "webpack-dev-server --mode production --env.build=prod",
