--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios-cancel": "^0.2.2",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.2",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^2.14.0",
     "dompurify": "^2.4.1",
     "draft-convert": "^2.1.13",
@@ -84,6 +85,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.27.0",
     "@storybook/addon-essentials": "^7.0.18",
     "@storybook/addon-interactions": "^7.0.18",
     "@storybook/addon-links": "^7.0.18",
@@ -92,7 +94,6 @@
     "@storybook/react": "^7.0.18",
     "@storybook/react-webpack5": "^7.0.18",
     "@storybook/testing-library": "^0.0.14-next.2",
-    "@babel/preset-typescript": "^7.27.0",
     "@types/jest": "^24.9.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
@@ -118,6 +119,7 @@
     "file-replace-loader": "^1.3.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^5.5.3",
+    "http-proxy-middleware": "^3.0.5",
     "image-webpack-loader": "^4.6.0",
     "jest": "^24.9.0",
     "midgard-core": "^0.1.4",
