--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
+    "@babel/eslint-parser": "^7.28.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.27.0",
@@ -107,8 +108,9 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.13.1",
     "enzyme-to-json": "^3.3.5",
-    "eslint": "^7.32.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
