--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,11 @@ npm-debug.log*
 #IDE
 .idea/
 .vscode/
+
+# Documentation System
+# Exclude the GitHub Pages repository (separate repo)
+scripts/docs-repo/
+scripts/docs-output/
+# Exclude documentation script dependencies
+scripts/node_modules/
+scripts/package-lock.json
