--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,8 @@ npm-debug.log*
 .vscode/
 
 # Documentation System
-# Exclude the GitHub Pages repository (separate repo)
+# All documentation has been moved to separate buildly-docs repository
+# Exclude any local documentation builds or repositories
 scripts/docs-repo/
 scripts/docs-output/
 # Exclude documentation script dependencies
