Complete documentation separation - remove all remaining docs traces
- Remove buildly-documentation.json file
- Remove all documentation automation scripts from scripts/
- Remove remaining docs/ directory
- Keep only essential deployment scripts (deploy.sh, deploy-aws.sh)
- Clean .gitignore to remove docs-related entries
- Update README.md to reference external docs repository

All documentation functionality has been successfully migrated to the separate buildly-docs repository.

--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,4 @@ npm-debug.log*
 
 # Documentation System
 # All documentation has been moved to separate buildly-docs repository
-# Exclude any local documentation builds or repositories
-scripts/docs-repo/
-scripts/docs-output/
-# Exclude documentation script dependencies
-scripts/node_modules/
-scripts/package-lock.json
+# (No local documentation files remain in this repository)
