fix: move initialize_container.sh back to root for Docker deployment
- Docker expects initialize_container.sh in root directory per Dockerfile CMD
- Fixed script path reference to work correctly in container environment
- Restored Jest test commands in package.json for proper testing

--- a/package.json
+++ b/package.json
@@ -160,10 +160,10 @@
     "start:local": "webpack-dev-server --mode development --env.build=local --openssl-legacy-provider",
     "build:prod": "webpack --mode production --env.build=prod --openssl-legacy-provider",
     "start:prod": "webpack-dev-server --mode production --env.build=prod",
-    "test": "echo '⚠️  Tests temporarily disabled for production deployment' && exit 0",
-    "test:watch": "echo '⚠️  Tests temporarily disabled for production deployment' && exit 0",
-    "test:prod": "echo '⚠️  Tests temporarily disabled for production deployment' && exit 0",
-    "test-coverage": "echo '⚠️  Tests temporarily disabled for production deployment' && exit 0",
+    "test": "jest --watchAll=false",
+    "test:watch": "jest --watch",
+    "test:prod": "jest --watchAll=false --coverage=false",
+    "test-coverage": "jest --watchAll=false --coverage --silent",
     "serve": "./node_modules/.bin/serve -s dist",
     "lint": "eslint src/**/*.js --fix"
   },
