--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "draft-js": "^0.11.7",
     "env-cmd": "^10.1.0",
     "flowchart-react": "^3.8.1",
+    "framer-motion": "^12.23.12",
     "html-react-parser": "^3.0.4",
     "html-to-draftjs": "^1.5.0",
     "i18next": "^15.1.3",
